# presstalk

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README-ja.md  README.md  presstalk-futuristic.html  presstalk.yaml  pyproject.toml  task.py
docs/: MIGRATION_v1.0.0.md  ROADMAP.md  accessibility-ja.md  accessibility.md  architecture.md  commands.md  design.md  usage-ja.md  usage.md
docs/adr/: ADR-001-default-hotkey-change.md
docs/dev/: GITHUB.md  RELEASE.md  VERSIONING.md  manual-hotkey-verification.md
docs/knowledge/: accessibility-research-ja.md  accessibility-research.md  report-hotkey.md
presstalk.egg-info/: entry_points.txt  top_level.txt
src/: presstalk.yaml
src/presstalk/: __init__.py  beep.py  capture.py  capture_sd.py  cli.py  config.py  constants.py  controller.py  hotkey.py  hotkey_pynput.py  logger.py  logo.py  orchestrator.py  paste.py  paste_common.py  (+4 more)
src/presstalk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_audio_feedback.py  test_capture.py  test_cli_config.py  test_cli_refactor.py  test_config.py  test_config_refactor.py  test_config_yaml.py  test_constants.py  test_controller.py  test_engine_dummy.py  test_engine_fwhisper.py  test_hotkey.py  test_hotkey_combo.py  test_logger.py  test_orchestrator.py  test_paste_common.py  test_paste_dispatch.py  test_paste_guard_defaults.py  test_paste_guard_yaml.py  test_paste_linux.py  test_paste_macos.py  test_paste_windows.py  test_preload.py  test_ring_buffer.py  test_status_and_timing.py  test_status_logging.py  test_task.py  test_version.py  test_web_config_api.py
(+8 files in other folders)
