[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "presstalk"
version = "0.1.0-beta.1"
description = "Local push-to-talk CLI with always-on capture and offline ASR"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pynput",
    "faster-whisper",
    "numpy",
    "sounddevice",
    "PyYAML",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Environment :: MacOS X",
        "Environment :: Win32 (MS Windows)",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Utilities",
]

#[project.optional-dependencies]
# (No extras; all core runtime deps are required.)

[project.scripts]
presstalk = "presstalk.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["presstalk"]
